--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Twitter Clone - Projeto Final EBAC</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <title>Twitter Clone – Projeto Final EBAC</title>
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta name="description" content="Clone acadêmico do Twitter desenvolvido como projeto final da EBAC" />
+  <meta name="author" content="Luan Luís" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+  <!-- Open Graph -->
+  <meta property="og:title" content="Twitter Clone – Projeto Final EBAC" />
+  <meta property="og:description" content="Clone acadêmico do Twitter desenvolvido para fins educacionais." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://SEU-DOMINIO.vercel.app/og.png" />
+  <meta property="og:url" content="https://SEU-DOMINIO.vercel.app" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Twitter Clone – Projeto Final EBAC" />
+  <meta name="twitter:description" content="Clone acadêmico do Twitter desenvolvido para estudos." />
+  <meta name="twitter:image" content="https://luanv10-projects.vercel.app/og.png" />
+</head>
