--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Twitter Clone – Projeto Final EBAC" />
   <meta name="twitter:description" content="Clone acadêmico do Twitter desenvolvido para estudos." />
-  <meta name="twitter:image" content="https://luanv10-projects.vercel.app/og.png" />
+  <meta property="og:image" content="https://luanv10-projects.vercel.app/og.png" />
+  <meta property="og:url" content="https://luanv10-projects.vercel.app" />
 </head>
