--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
   <meta name="twitter:title" content="Twitter Clone – Projeto Final EBAC" />
   <meta name="twitter:description" content="Clone acadêmico do Twitter desenvolvido para estudos." />
   <meta property="og:image" content="https://luanv10-projects.vercel.app/og.png" />
-  <meta property="og:url" content="https://luanv10-projects.vercel.app" />
+  <meta property="og:url" content=https://academic-tweet-clone.vercel.app/og.png />
 </head>
