Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
   <meta name="twitter:title" content="Twitter Clone – Projeto Final EBAC" />
   <meta name="twitter:description" content="Clone acadêmico do Twitter desenvolvido para estudos." />
   <meta property="og:url" content=https://academic-tweet-clone.vercel.app/og.png />
+  <link rel="icon" type="image/svg+xml" href="https://abs.twimg.com/favicons/twitter.2.ico" />
 </head>
