--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="https://abs.twimg.com/favicons/twitter.2.ico" />
 
   <title>Twitter Clone – Projeto Final EBAC</title>
 
   <meta name="description" content="Clone acadêmico do Twitter desenvolvido como projeto final da EBAC" />
   <meta name="author" content="Luan Luís" />
 
-  <!-- Open Graph -->
   <meta property="og:title" content="Twitter Clone – Projeto Final EBAC" />
   <meta property="og:description" content="Clone acadêmico do Twitter desenvolvido para fins educacionais." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://SEU-DOMINIO.vercel.app/og.png" />
-  <meta property="og:url" content="https://SEU-DOMINIO.vercel.app" />
+  <meta property="og:url" content="https://academic-tweet-clone.vercel.app" />
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Twitter Clone – Projeto Final EBAC" />
   <meta name="twitter:description" content="Clone acadêmico do Twitter desenvolvido para estudos." />
-  <meta property="og:url" content=https://academic-tweet-clone.vercel.app/og.png />
-  <link rel="icon" type="image/svg+xml" href="https://abs.twimg.com/favicons/twitter.2.ico" />
 </head>
+
+<body>
+  <div id="root"></div>
+
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+</html>
